[package]
name = "cuda_blas"
version = "0.2.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
license = "BSD-2-Clause"
description = "cuBLAS API bindings."
respository = "https://github.com/peterhj/libcuda_blas"
keywords = ["cuda", "blas", "cublas"]
build = "build.rs"

[features]
cuda9 = []

[build-dependencies]
bindgen = "*"

[dependencies]
cuda = { path = "../libcuda" }
float = { path = "../float" }

[lib]
name = "cuda_blas"
path = "src/lib.rs"
